added login pages

--- a/html/home.html
+++ b/html/home.html
@@ -20,9 +20,9 @@
                     <input type="text" placeholder="Enter delivery address">
                     <button class="btn">Find Food</button>
                 </div>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Log in</a></li>
-                <button>Sign Up</button>
+                <li><a href="#">Cart</a></li>
+                <li><a href="registration.html">Log in</a></li>
+                <button><a href="admin.html">Admin?</a></button>
             </ul>
         </nav>
         <div>
