--- a/html/home.html
+++ b/html/home.html
@@ -50,40 +50,40 @@
                     <div class="card_image">
                         <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
                 <div class="card 3">
                     <div class="card_image">
-                        <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                        <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
                 <div class="card 3">
                     <div class="card_image">
-                        <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                        <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
                 <div class="card 3">
                     <div class="card_image">
-                        <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                        <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
 
                 <div class="card 4">
                     <div class="card_image">
-                        <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" />
+                        <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title title-black">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
@@ -115,40 +115,40 @@
                     <div class="card_image">
                         <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
                 <div class="card 3">
                     <div class="card_image">
-                        <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                        <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
                 <div class="card 3">
                     <div class="card_image">
-                        <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                        <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
                 <div class="card 3">
                     <div class="card_image">
-                        <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                        <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
 
                 <div class="card 4">
                     <div class="card_image">
-                        <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" />
+                        <img src="https://tinyurl.com/47nxb46j" />
                     </div>
-                    <div class="card_title title-black">
+                    <div class="card_title title-white">
                         <p>Card Title</p>
                     </div>
                 </div>
