--- a/html/restuants.html
+++ b/html/restuants.html
@@ -64,7 +64,7 @@
                 <div class="card_image">
                     <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -75,9 +75,9 @@
             </div>
             <div class="card 3">
                 <div class="card_image">
-                    <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                    <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -88,9 +88,9 @@
             </div>
             <div class="card 3">
                 <div class="card_image">
-                    <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                    <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -101,9 +101,9 @@
             </div>
             <div class="card 3">
                 <div class="card_image">
-                    <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                    <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -115,9 +115,9 @@
 
             <div class="card 4">
                 <div class="card_image">
-                    <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" />
+                    <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title title-black">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -161,7 +161,7 @@
                 <div class="card_image">
                     <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -172,9 +172,9 @@
             </div>
             <div class="card 3">
                 <div class="card_image">
-                    <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                    <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -185,9 +185,9 @@
             </div>
             <div class="card 3">
                 <div class="card_image">
-                    <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                    <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -198,9 +198,9 @@
             </div>
             <div class="card 3">
                 <div class="card_image">
-                    <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+                    <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
@@ -212,9 +212,9 @@
 
             <div class="card 4">
                 <div class="card_image">
-                    <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" />
+                    <img src="https://tinyurl.com/47nxb46j" />
                 </div>
-                <div class="card_title title-black">
+                <div class="card_title title-white">
                     <p>Card Title</p>
                 </div>
                 <div class="counter">
