edits to the login and registration pages

--- a/html/restuants.html
+++ b/html/restuants.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/restuants.css">
     <script src="js/restuant.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurants</title>
 </head>
 
 <body>
@@ -17,14 +17,14 @@
         <nav class="navbar">
 
             <ul class="nav-links">
-                <li><a href="#">HomeEats</a></li>
+                <li><a href="home.html">HomeEats</a></li>
                 <div class="search">
                     <input type="text" placeholder="Enter delivery address">
                     <button class="btn">Find Food</button>
                 </div>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Cart</a></li>
                 <li><a href="#">Log in</a></li>
-                <button>Sign Up</button>
+                
             </ul>
         </nav>
         <div>
